fixed navbar hamburger menu z-index and price-list + button css

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
   background-color: #25a4cc;
   padding: 25px 0 15px;
   position: relative;
-  z-index: 10;
+  z-index: 20;
   max-height: 90px;
   min-height: 80px;
 }
