--- a/src/pages/TreatmentsList/PriceList.css
+++ b/src/pages/TreatmentsList/PriceList.css
@@ -2,19 +2,18 @@
   font-family: roboto;
 }
 .title-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 2.2em;
-    margin-top: 1.5em;
-    align-self: flex-end;
-    line-height: 27px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2.2em;
+  margin-top: 1.5em;
+  align-self: flex-end;
+  line-height: 27px;
 }
 
 .treatment-container {
-display: flex;
-justify-content: space-be
-
+  display: flex;
+  justify-content: space-be;
 }
 .money-pin {
   width: 30px;
@@ -25,7 +24,6 @@ justify-content: space-be
   font-size: 22px;
   font-weight: 300px;
   text-align: center;
-  
 }
 
 .price-container {
@@ -35,7 +33,6 @@ justify-content: space-be
   justify-content: space-between;
   max-width: 600px;
   margin: auto;
-  
 }
 
 .treatment-name {
@@ -55,22 +52,18 @@ justify-content: space-be
   text-align: center;
   border-radius: 50%;
   display: block;
-  
- 
 }
 
-.delete-button2{
-    background: none;
-    border: none;
-    height: fit-content;
-
+.delete-button2 {
+  background: none;
+  border: none;
+  height: fit-content;
 }
 .add-patient-button {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin-bottom: 25px;
-  margin-right: 20px;
+  position: fixed;
+  cursor: pointer;
+  bottom: 25px;
+  right: 20px;
 }
 
 .button-edit-treatment {
@@ -80,9 +73,8 @@ justify-content: space-be
   border-radius: 50%;
   display: block;
   align-items: flex-end;
-
 }
-.edit-button{
-    background: none;
-    border: none;
+.edit-button {
+  background: none;
+  border: none;
 }
